# cpp-simple-exemple

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/hello/: hello.hpp
include/player/: player.hpp
include/user/: user.hpp
src/: main.cpp
src/hello/: hello.cpp
src/player/: player.cpp
src/user/: user.cpp
